- acc_flag is now called log_flag to better reflect it relates
  to the syslog mode (as opposed to sql/radius); for the same
  reasons, the accounting action is now called "acc_log_request"
- log_fmt allows now to specify what will be printed to syslog

auth module:
------------
XXX is_in_group has been obsoleted by ...

domain module:
--------------
XXX

enum module:
------------
XXX

exec module:
------------
- exec_uri and exec_user have been obsoleted by exec_dset; 
  exec_dset is identical to exec_uri in capabilities; it 
  additionaly passes content of request elements (header 
  fields and URI parts) in environment variables; users of 
  exec_user can use exec_dset now and use the "URI_USER"  
  variable to learn user part of URI
- exec_dset and exec_msg return false, if return value of 
  script does not euqal zero
- exec_dset takes an additional parameter, which enables 
  validation of SIP URIs returned by external application
  
pa module:
----------
XXX

rr module:
----------
XXX

tm module:
----------
- t_reply_unsafe, used in former versions within reply_routes,
  is deprecated; now t_reply is used from any places in script
- t_on_negative is renamed to t_on_failure -- the old name just
  caused too much confusion
- FIFO t_uac used by some applications (like serweb) has been
  replaced with t_uac_dlg (which allows easier use by dialog-
  oriented applications, like click-to-dial) 
- if you wish to do forward to another destination from 
  failure_route (reply_route formerly), you need to call t_relay
  or t_relay_to explicitely now

List of new modules:
--------------------
- dbtext -- flat-file database
- domain -- automated domain management
- enum -- ENUM support
- nathelper -- utility for NAT traversal for Cisco ATAs
- pa -- presence agent
- permissions -- ACLs
- vm -- voicemail interface

List of deprecated modules:
---------------------------
- im (t_uac_dlg is used for sending messages)
- radius_acc (radius accounting now part of acc module)