@@ -31,6 +31,8 @@
  * History:
  * -------
  *  2003-02-13  added proto to uri2proxy (andrei)
+ *  2003-04-14  added get_proto to determine protocol from uri unless
+ *              specified explicitely (jiri)
 */
 
 
@@ -38,6 +40,7 @@
 #define _TM_UT_H
 
 #include "defs.h"
+#include "../../ip_addr.h"
 
 
 #include "../../dprint.h"
@@ -46,12 +49,45 @@
 #include "../../str.h"
 #include "../../parser/msg_parser.h"
 
+
+inline static enum sip_protos get_proto(enum sip_protos force_proto,
+	struct sip_uri *u)
+{
+	/* calculate transport protocol */
+	switch(force_proto) {
+		case PROTO_NONE: 	/* no protocol has been forced -- look at uri */
+			switch(u->proto) {
+				case PROTO_NONE: /* uri default to UDP */
+					return PROTO_UDP;
+				case PROTO_UDP: /* transport specified explicitely */
+#ifdef USE_TCP
+				case PROTO_TCP:
+#endif
+					return u->proto;
+				default:
+					LOG(L_ERR, "ERROR: get_proto: unsupported transport: %d\n",
+						u->proto );
+					return PROTO_NONE;
+			}
+		case PROTO_UDP: /* some protocol has been forced -- take it */
+#ifdef USE_TCP
+		case PROTO_TCP:
+#endif
+			return force_proto;
+		default:
+			LOG(L_ERR, "ERROR: get_proto: unsupported forced protocol: "
+				"%d\n", force_proto);
+			return PROTO_NONE;
+	}
+}
+
 inline static struct proxy_l *uri2proxy( str *uri, int proto )
 {
 	struct sip_uri parsed_uri;
 	unsigned int  port; 
 	struct proxy_l *p;
 	int err;
+	enum sip_protos out_proto;
 
 	if (parse_uri(uri->s, uri->len, &parsed_uri)<0) {
 		LOG(L_ERR, "ERROR: t_relay: bad_uri: %.*s\n",
@@ -68,7 +104,15 @@ inline static struct proxy_l *uri2proxy( str *uri, int proto )
 	/* fixed use of SRV resolver
 	} else port=SIP_PORT; */
 	} else port=0;
-	p=mk_proxy(&(parsed_uri.host), port, proto);
+
+	out_proto=get_proto(proto,&parsed_uri);
+	if (out_proto==PROTO_NONE) {
+		LOG(L_ERR, "ERROR: uri2proxy: transport can't be determined "
+			"for URI <%.*s>\n", uri->len, uri->s );
+		return 0;
+	}
+
+	p=mk_proxy(&(parsed_uri.host), port, out_proto);
 	if (p==0) {
 		LOG(L_ERR, "ERROR: t_relay: bad host name in URI <%.*s>\n",
 			uri->len, uri->s);
